# numQs_for_dense_retriever

./: README.md  pyproject.toml
experimental_settings/: numerical_condition_benchmark_base.py
experiments/job_dataset/: .gitignore  download_raw_datasets.sh
experiments/job_dataset/company_employee/: company_employee_dataset_benchmark.py  main.py  make_company_employee_datasets.py
experiments/job_dataset/job_post/: job_post_dataset_benchmark.py  main.py  make_job_post_datasets.py
experiments/movie_dataset/: .gitignore  download_raw_datasets.sh  main.py  make_movie_datasets.py  movie_revenue_benchmark.py
experiments/movie_dataset/conf/: config.yaml
experiments/sensitive_attribute_synthetic_dataset/synthetic_salary_explicit/: main.py  make_synthetic_salary_dataset.py  (+1 more)
experiments/synthetic_corporate_value/: coporate_value_dataset_benchmark.py  main.py  make_corporate_value_datasets.py
experiments/synthetic_unit_dataset/: main.py  make_unit_datasets.py  unit_dataset_benchmark.py
models/: train_tevatron_bert_dpr.sh  train_tevatron_finbert_dpr.sh  train_tevatron_genbert_dpr.sh  train_tevatron_secbert_dpr.sh  train_tevatron_secbert_num_dpr.sh
scripts/: company-employee.sh  corporate_value.sh  job-post.sh  job-salary_explicit.sh  job-salary_implicit.sh  movie-revenue.sh  toefl-score_explicit.sh  toefl-score_implicit.sh  unit.sh
utils/: bm25_sparse_retriever.py  colbert_retriever.py  dpr_embedding.py  e5_embedding.py  openai_embedding.py  random_embedding.py  tevatron_dpr_embedding.py
utils/models/: embedding_model.py  retriever_model.py
(+16 files in other folders)
